--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "celebrate": "^12.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "knex": "^0.20.13",
+    "nodemailer": "^6.4.6",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
